CRUD Gestion: usuarios, servicio forense, regioanles, cliente/municipio

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -170,8 +170,9 @@ ListEstadoIndexLink=Index
 
 AQUI EMPIEZA GRUPO
 CreateGrupoTitle=Crear Nuevo Grupo
+ViewGrupoTitle=Verr Grupo
 EditGrupoTitle=Editar Grupo
-EditGrupoViewLink=Ver Grupo
+EditGrupoViewLink=Edit
 CreateGrupoSaveLink=Save
 CreateGrupoShowAllLink=Show All Grupo Items
 CreateGrupoIndexLink=Index
