CRUD completo de todas las vistas del admin, vista usuario con metodo en el facade para traer las preguntas asociadas a una encuesta

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -29,8 +29,8 @@ Rol=Rol
 Muestra_estadistica=Muestra Estad\u00edstica
 Respuestas=Respuestas
 Estado=Estado
-PreguntasParametrosMedicion=Preguntas -Parametros Medici\u00f3n
-
+PreguntasParametrosMedicion=Preguntas - Parametros Medici\u00f3n
+EncuestaPreguntas=Encuesta - Preguntas
 
 Created=Creado correctamente.
 Updated=Editado correctamente.
@@ -197,6 +197,7 @@ CreateMuestraTitle=Create Nueva Muestra Estad\u00edstica
 EditMuestraTitle=Editar Muestra Estad\u00edstica
 ViewMuestraTitle=Ver Muestra Estad\u00edstica
 Muestra_planeada=Muestra planeada
+fechaMuestra=Fecha Muestra Estad\u00edstica
 CreateMuestraSaveLink=Save
 CreateMuestraShowAllLink=Show All Muestra Items
 CreateMuestraIndexLink=Index
@@ -204,7 +205,6 @@ EditMuestraSaveLink=Save
 EditMuestraViewLink=View
 EditMuestraShowAllLink=Show All Muestra Items
 EditMuestraIndexLink=Index
-fechaMuestra=Fecha Muestra Estad\u00edstica
 ViewMuestraDestroyLink=Destroy
 ViewMuestraEditLink=Edit
 ViewMuestraCreateLink=Create New Muestra
@@ -338,6 +338,7 @@ AQUI EMPIEZA RESPUESTA
 CreateRespuestaTitle=Create Nueva Respuesta
 EditRespuestaTitle=Editar Respuesta
 ViewRespuestaTitle=Ver Respuesta
+fechaRealizacion=Fecha realizaci\u00f3n encuesta
 CreateRespuestaSaveLink=Save
 CreateRespuestaShowAllLink=Show All Respuesta Items
 CreateRespuestaIndexLink=Index
@@ -468,6 +469,7 @@ Label_cedula=Cedula
 Label_apellido=Apellido
 Label_contrase\u00f1a=Contrase\u00f1a
 Label_correo=Correo
+Label_usuario=Usuario
 CreateUsuarioSaveLink=Save
 CreateUsuarioShowAllLink=Show All Usuario Items
 CreateUsuarioIndexLink=Index
