Full con preguntas y parametros de medicion de acuerdo a la pregunta, todo en el muestracontroller

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -244,6 +244,7 @@ AQUI EMPIEZA PARAMETROS DE MEDICI\u00d6N
 CreateParametrosMedicionTitle=Creaar Nuevo Parametro de Medici\u00f3n
 EditParametrosMedicionTitle=Editar Parametro de Medici\u00f3n
 ViewParametrosMedicionTitle=Ver Parametro de Medici\u00f3n
+Parametro_Medicion=Parametro de Medicion
 CreateParametrosMedicionSaveLink=Save
 CreateParametrosMedicionShowAllLink=Show All ParametrosMedicion Items
 CreateParametrosMedicionIndexLink=Index
@@ -339,6 +340,7 @@ CreateRespuestaTitle=Create Nueva Respuesta
 EditRespuestaTitle=Editar Respuesta
 ViewRespuestaTitle=Ver Respuesta
 fechaRealizacion=Fecha realizaci\u00f3n encuesta
+Label_respuesta=Respuesta
 CreateRespuestaSaveLink=Save
 CreateRespuestaShowAllLink=Show All Respuesta Items
 CreateRespuestaIndexLink=Index
