Registra datos de Respuesta, full + Mensajes de alerta

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -35,7 +35,7 @@ EncuestaPreguntas=Encuesta - Preguntas
 Created=Creado correctamente.
 Updated=Editado correctamente.
 Deleted=Borrado correctamente.
-
+RequiredMessage=Verifique que todos los campos esten diligenciados.
 
 AQUI_EMPIEZA ASPECTO
 CreateAspectoTitle=Crear Nuevo Aspecto
@@ -100,7 +100,7 @@ ListCriterioCreateLink=Create New Criterio
 ListCriterioIndexLink=Index
 
 AQUI EMPIEZA ENCUESTA
-CreateEncuestaTitle=Create Nueva Encuesta
+CreateEncuestaTitle=Crear Nueva Encuesta
 EditEncuestaTitle=Editar Encuesta
 ViewEncuestaTitle=Ver Encuesta
 CreateEncuestaSaveLink=Save
@@ -123,7 +123,7 @@ ListEncuestaCreateLink=Create New Encuesta
 ListEncuestaIndexLink=Index
 
 AQUI EMPIEZA ENCUESTA PREGUNTAS
-CreateEncuestaPreguntasTitle=Create Nueva Encuesta Pregunta
+CreateEncuestaPreguntasTitle=Crear Nueva Encuesta Pregunta
 EditEncuestaPreguntasTitle=Editar Encuesta Pregunta
 ViewEncuestaPreguntasTitle=Ver Encuesta Pregunta
 CreateEncuestaPreguntasSaveLink=Save
@@ -135,7 +135,7 @@ EditEncuestaPreguntasShowAllLink=Show All EncuestaPreguntas Items
 EditEncuestaPreguntasIndexLink=Index
 ViewEncuestaPreguntasDestroyLink=Destroy
 ViewEncuestaPreguntasEditLink=Edit
-ViewEncuestaPreguntasCreateLink=Create New EncuestaPreguntas
+ViewEncuestaPreguntasCreateLink=Crear Nueva EncuestaPreguntas
 ViewEncuestaPreguntasShowAllLink=Show All EncuestaPreguntas Items
 ViewEncuestaPreguntasIndexLink=Index
 ListEncuestaPreguntasEmpty=(No EncuestaPreguntas Items Found)
@@ -146,7 +146,7 @@ ListEncuestaPreguntasCreateLink=Create New EncuestaPreguntas
 ListEncuestaPreguntasIndexLink=Index
 
 AQUI EMPIEZA ESTADO
-CreateEstadoTitle=Create Nuevo Estado
+CreateEstadoTitle=Crear Nuevo Estado
 EditEstadoTitle=Editar Estado
 ViewEstadoTitle=Ver Estado
 CreateEstadoSaveLink=Save
@@ -193,7 +193,7 @@ ListGrupoCreateLink=Create New Grupo
 ListGrupoIndexLink=Index
 
 AQUI EMPIEZA MUESTRA
-CreateMuestraTitle=Create Nueva Muestra Estad\u00edstica
+CreateMuestraTitle=Crear Nueva Muestra Estad\u00edstica
 EditMuestraTitle=Editar Muestra Estad\u00edstica
 ViewMuestraTitle=Ver Muestra Estad\u00edstica
 Muestra_planeada=Muestra planeada
@@ -241,7 +241,7 @@ ListMunicipioCreateLink=Create New Municipio
 ListMunicipioIndexLink=Index
 
 AQUI EMPIEZA PARAMETROS DE MEDICI\u00d6N
-CreateParametrosMedicionTitle=Creaar Nuevo Parametro de Medici\u00f3n
+CreateParametrosMedicionTitle=Crear Nuevo Parametro de Medici\u00f3n
 EditParametrosMedicionTitle=Editar Parametro de Medici\u00f3n
 ViewParametrosMedicionTitle=Ver Parametro de Medici\u00f3n
 Parametro_Medicion=Parametro de Medicion
@@ -336,7 +336,7 @@ ListRegionalCreateLink=Create New Regional
 ListRegionalIndexLink=Index
 
 AQUI EMPIEZA RESPUESTA
-CreateRespuestaTitle=Create Nueva Respuesta
+CreateRespuestaTitle=Crear Nueva Respuesta
 EditRespuestaTitle=Editar Respuesta
 ViewRespuestaTitle=Ver Respuesta
 fechaRealizacion=Fecha realizaci\u00f3n encuesta
@@ -464,7 +464,7 @@ ListTipoPreguntaCreateLink=Create New TipoPregunta
 ListTipoPreguntaIndexLink=Index
 
 AQUI EMPIEZA USUARIOS
-CreateUsuarioTitle=Create Nuevo Usuario
+CreateUsuarioTitle=Crear Nuevo Usuario
 EditUsuarioTitle=Editar Usuario
 ViewUsuarioTitle=Ver Usuario
 Label_cedula=Cedula
